0028332: Unstable tests in group gdt export

Add initialization of variable GDTMode in STEP writer.